# ksef

./: .gitignore  InitSessionTokenRequest.xml  KSeF-common.yaml  KSeF-online.yaml  LICENSE  README.md  autoryzacja-ksef-test.md  batch2valid.sh  config-batch.yaml  config-common.yaml  config-online.yaml  demo-batch-zip-gm.sh  demo-batch-zip-upload-gm.sh  demo-batch-zip-upload.py  demo-batch-zip.py  demo-online-gm-2.sh  demo-online-q3q2.sh  demo-online-tr-2.sh  demo-online.py  demo-upo-tr.sh  demo-upo.py  demo.py  errors-online  errors-online-1  fv-bad  fv-bad-001.xml  fv-gm-tr.sh  fv-tr-gm.sh  fv.py  initRequest.xsd  ksef.ini  logging.ini  openapi_python_client.batch.diff  openapi_python_client.common.diff  openapi_python_client.diff  openapi_python_client.online.diff  requirements.txt  x-bug-01.py  x-cert.sh  x-openapi-python-client  (+7 more)
ksef/: __init__.py
ksef-openapi/: demo-online.py  x-openapi-generator-cli
ksef/batch/: types.py
ksef/batch/api/: __init__.py
ksef/batch/models/: __init__.py  exception_response.py  exception_type.py  (+8 more)
ksef/common/: __init__.py
ksef_client/: x-gen
ksef_client/models/: credentials_role_response_base_type_object_role_type.py
ksefonline/: README.md  pyproject.toml
old/: KSeF-online.yaml  KSeF_token.py  demo.py
old/ksef_client/: client.py  config.yaml  consts.py  types.py  utils.py
openapi_python_client/: __init__.py  config.py
openapi_python_client/parser/: openapi.py  responses.py
openapi_python_client/templates/: api_init.py.jinja  endpoint_init.py.jinja  endpoint_macros.py.jinja  endpoint_module.py.jinja  types.py.jinja
(+277 files in other folders)
